<?xml version="1.0" encoding="utf-8"?>
<com.sothree.slidinguppanel.SlidingUpPanelLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:sothree="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_slidinguppanel"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    sothree:umanoPanelHeight="68dp"
    tools:context="com.teamalpha.aichef.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.teamalpha.aichef.MainActivity">

        <FrameLayout
            android:id="@+id/menuBar"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".07"
            android:background="@android:drawable/bottom_bar">

            <Button
                android:id="@+id/recipesListButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/recipes_list" />

            <Button
                android:id="@+id/shoppingListButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shopping_list"
                android:textSize="14sp" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/camFrame"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".95">

            <SearchView
                android:id="@+id/searchView"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@android:drawable/screen_background_light_transparent">

            </SearchView>


            <ProgressBar
                android:id="@+id/spinner"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_gravity="bottom|center_vertical|center_horizontal"
                android:visibility="gone" />

            <Button
                android:id="@+id/cameraButton"

                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="bottom|center_vertical|center_horizontal"
                android:layout_marginBottom="25dp"
                android:background="@drawable/buttonshape"
                android:text="SCAN"
                android:textColor="@android:color/black" />

        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.8"
        android:orientation="vertical">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="68dp"/>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/vpPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </androidx.viewpager.widget.ViewPager>

    </LinearLayout>


</com.sothree.slidinguppanel.SlidingUpPanelLayout>